SP8-2 [UPDATE] rename theme

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,13 +1,13 @@
 /*!
-Theme Name: ThemeBox
+Theme Name: SoaPatrickEight
 Theme URI:
 Author: SoaPatrick
 Author URI: https://www.soapatrick.com
 Description:
-Version: 1.4.0
+Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: themebox
+Text Domain: soapatrickeight
 */
 
 /*--------------------------------------------------------------
