SP8-8 [ADD] add sass files for blocks

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -11,5 +11,8 @@
 //Components
 @import "components/__components-dir";
 
+//Blocks
+@import "blocks/__blocks-dir";
+
 //Layout
 @import "layouts/__layouts-dir";
