SP8-8 [ADD] add basic structure

--- a/assets/scss/base/_helper.scss
+++ b/assets/scss/base/_helper.scss
@@ -1,3 +1,8 @@
 /*--------------------------------------------------------------
-#Main-Navigation
+#Helper
 --------------------------------------------------------------*/
+
+img {
+  max-width: 100%;
+  height: auto;
+}
