--- a/assets/scss/layouts/_aside.scss
+++ b/assets/scss/layouts/_aside.scss
@@ -1,3 +1,7 @@
 /*--------------------------------------------------------------
-#Header
+#Aside
 --------------------------------------------------------------*/
+
+.site-aside {
+  background: var(--color__highlight);
+}
