--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -7,6 +7,7 @@ html {
 }
 
 body {
+  background: var(--color__background);
   font-family: $font-family__base;
   font-weight: $font-weight__light;
   line-height: $line-height__base;
