--- a/assets/scss/layouts/__layouts-dir.scss
+++ b/assets/scss/layouts/__layouts-dir.scss
@@ -11,5 +11,5 @@ Unique combinations of components and base styles are imported here
 //Import Layout files
 @import "navigation";
 @import "main";
-@import "aside";
 @import "footer";
+@import "search";
