--- a/assets/scss/layouts/_main.scss
+++ b/assets/scss/layouts/_main.scss
@@ -3,5 +3,6 @@
 --------------------------------------------------------------*/
 
 .site-main {
-  padding: 4rem 2rem;
+  padding: $margin__base;
+  z-index: 2;
 }
