--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -9,10 +9,14 @@
     font-family: $font-family__heading;
     font-size: $font-size__h3;
     position: fixed;
-    bottom: $margin__base;
+    bottom: calc(#{$margin__base} - 5px);
     left: $margin__base;
     width: calc(#{$navbar--width} - 2 * #{$margin__base});
     @include list--reset();
+
+    @media (max-width: 911px) {
+      position: static;
+    }
   }
 
   .site-navigation__link {
@@ -32,5 +36,14 @@
         }
       }
     }
+  }
+
+  @media (max-width: 911px) {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    padding: 2rem;
   }
 }
