SP8-8 [UPDATE] add different take on structure grid

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -29,6 +29,7 @@ $font-family__heading: 'Recoleta', serif;
 
 // Font-Sizes
 $font-size__base: 20px;
+$font-size__base--mobile: 18px;
 $font-size__h1: 3rem;
 $font-size__h2: 2rem;
 $font-size__h3: 1.17rem;
