--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -6,7 +6,7 @@ html {
   font-size: $font-size__base;
 
   @media (max-width: 480px) {
-    font-size: $font-size__small;
+    font-size: $font-size__base--mobile;
   }
 }
 
