--- a/assets/scss/components/_article.scss
+++ b/assets/scss/components/_article.scss
@@ -65,13 +65,15 @@ section > header {
   &__excerpt {
     grid-area: excerpt;
     margin: 2rem 0;
+    max-width: 700px;
   }
 
   &__content {
     margin: 2rem -2rem;
     display: grid;
     row-gap: 2rem;
-    grid-template-columns: 2rem minmax(320px, 700px) auto; // 900px
+    grid-template-columns: 2rem minmax(320px, 700px) minmax(2rem, calc(580px - 2rem)) minmax(2rem, auto); // 900px
+
 
     > * {
       grid-column: 2 / 3;
@@ -79,11 +81,25 @@ section > header {
     }
 
     .alignwide{
-      grid-column: 1 / 3;
+      grid-column: 1 / 4;
     }
 
     .alignfull {
-      grid-column: 1 / 4;
+      grid-column: 1 / 5;
+    }
+
+    @media (max-width: 767px) {
+      grid-template-columns: 2rem auto 2rem;
+
+      > * {
+        grid-column: 2 / 3;
+        margin: 0;
+      }
+
+      .alignwide,
+      .alignfull {
+        grid-column: 1 / 4;
+      }
     }
 
     h2 {
