--- a/assets/scss/components/_article.scss
+++ b/assets/scss/components/_article.scss
@@ -30,7 +30,7 @@ section > header {
 
   &__header {
     h2 {
-      margin-bottom: 0;
+      margin-bottom: .75rem;
       font-size: 2rem;
       max-width: 700px;
 
@@ -43,10 +43,11 @@ section > header {
   &__meta {
     position: relative;
     font-size: $font-size__small;
-    line-height: 1.5;
+    line-height: 1.7;
     max-width: 700px;
 
     &:before {
+      top: .2rem;
       position: absolute;
       display: inline-block;
       //border-top-right-radius: .5rem;
@@ -64,8 +65,12 @@ section > header {
 
   &__excerpt {
     grid-area: excerpt;
-    margin: 2rem 0;
+    margin: 1rem 0 2rem 0;
     max-width: 700px;
+
+     p {
+       margin: 0;
+     }
   }
 
   &__content {
