SP8-8 [UPDATE] add more basic structure elements
- add breadcrumbs navigation (for now)
- add color & dark/light settings panel
- add acf fields for changelog and project tax
- add archive log
- update navigation with more elements
- add factory single view
- add factory related items
- add factory latest items
- add factory featured full view (might change later)
- add factory tag view
- add storage page
- enqueue script for infinity change log scroll
- delete single template
- delete sidebar template
- delete comments template

--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -2,6 +2,13 @@
 #Mixins
 --------------------------------------------------------------*/
 
+// mixin for  switching colors in settings
+@mixin color-switch($color-name, $color) {
+  #switch--#{$color-name} {
+    background-color: $color;
+  }
+}
+
 // Reset browsers default button styling
 @mixin btn--reset() {
   margin: 0;
