--- a/assets/scss/layouts/__layouts-dir.scss
+++ b/assets/scss/layouts/__layouts-dir.scss
@@ -13,3 +13,4 @@ Unique combinations of components and base styles are imported here
 @import "main";
 @import "footer";
 @import "search";
+@import "settings";
