SP8-8 [UPDATE] add more basic templates and stylung

--- a/assets/scss/abstracts/__abstracts-dir.scss
+++ b/assets/scss/abstracts/__abstracts-dir.scss
@@ -13,3 +13,4 @@ Files inside this folder can contain abstract settings, helper functions and non
 @import "mixins";
 @import "functions";
 @import "variables";
+@import "animation";
