--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -48,7 +48,7 @@ $line-height__base: 1.7;
 $line-height__heading: 1.3;
 
 // Link Borders
-$link__border--thin: .5px;
+$link__border--thin: 1px;
 $link__border--normal: 1px;
 
 // Margin Bases
