--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -28,8 +28,7 @@ $font-family__base: 'Lato', sans-serif;
 $font-family__heading: 'Recoleta', serif;
 
 // Font-Sizes
-$font-size__base: 20px;
-$font-size__base--mobile: 18px;
+$font-size__base: clamp(18px,1.5vw,20px);
 $font-size__h1: 3rem;
 $font-size__h2: 2rem;
 $font-size__h3: 1.17rem;
