--- a/assets/scss/components/_article.scss
+++ b/assets/scss/components/_article.scss
@@ -2,17 +2,16 @@ article > header,
 section > header {
 
   h1 {
-    font-size: calc(10px + 10vw);
+    font-size: clamp(2rem,10vw,125px);
     margin-top: 0;
     margin-left: -$navbar--width;
     margin-right: -$navbar--width;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
     line-height: 1.15;
     max-width: 100vw;
     margin-right: 0;
 
     @media (min-width: 1540px) {
-      font-size: 170px;
       max-width: 80vw;
       margin-right: -$navbar--width;
     }
@@ -20,6 +19,16 @@ section > header {
     @media (max-width: 911px) {
       margin-left: -1.5rem;
     }
+
+
+
+
+    //for quote and status:
+    // font-size: clamp(1.5rem, 5vw, 60px);
+    // max-width: 1000px;
+    // line-height: 1.2;
+    // padding-left: 2rem;
+    // border-left: 5px solid var(--color__highlight);
   }
 }
 
