--- a/assets/scss/abstracts/_fonts.scss
+++ b/assets/scss/abstracts/_fonts.scss
@@ -2,35 +2,14 @@
 #Fonts
 --------------------------------------------------------------*/
 
-// @import must be at top of file, otherwise CSS will not work
-@import url("//hello.myfonts.net/count/36f9a1");
-
 @font-face {
-  font-family: 'AmsiProNarw-Black';
-  src: url('../fonts/AmsiProNarw-Black.woff2') format('woff2');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-style: normal;
-  font-weight: 300;
-  src: url('../fonts/SourceSansPro-300.woff2') format('woff2');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/SourceSansPro-400.woff2') format('woff2');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-style: normal;
+  font-family: 'Recoleta';
+  src: url('../fonts/Recoleta-Bold.ttf')  format('truetype');
   font-weight: 700;
-  src: url('../fonts/SourceSansPro-700.woff2') format('woff2');
+  font-style: normal;
   font-display: swap;
 }
+
+// Google Font Lato:
+// https://fonts.google.com/specimen/Lato
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
