--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -24,12 +24,12 @@ $color__blue: #28aae2;
 $color__green: #348236;
 
 // Font-Family
-$font-family__base: 'Source Sans Pro', serif;
-$font-family__heading: 'AmsiProNarw-Black', sans-serif;
+$font-family__base: 'Lato', sans-serif;
+$font-family__heading: 'Recoleta', serif;
 $font-family__code: Hack, "Fira Code", Consolas, Menlo, Monaco, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
 
 // Font-Sizes
-$font-size__base: calc(18px + .25vw);
+$font-size__base: clamp(16px, 1.5vw, 20px);
 $font-size__h1: 2.2rem;
 $font-size__h2: 1.5rem;
 $font-size__h3: 1.2rem;
@@ -37,10 +37,10 @@ $font-size__h4: 1rem;
 $font-size__small: 0.8rem;
 $font-size__smaller: 0.65rem;
 $font-size__medium: calc(22px + 1.5vw);
-$font-size__large: calc(26px + 1.6vw);
+$font-size__large: clamp(2rem, 10vw, 4rem);
 
 // Font Line-Height
-$line-height__base: calc(1.5em + .2vw);
+$line-height__base: 1.7;
 $line-height__heading: 1.3;
 
 // Font-Weight:
@@ -62,8 +62,8 @@ $outline: $outline__width dotted var(--color__highlight);
 $outline-highlight: $outline__width dotted $color__white;
 
 // Navbar
-$navbar__width: 3rem;
-$navbar__height: 1.2 * $navbar__width;
+$navbar__width: clamp(130px, 12vw, 200px);
+$navbar__height: 3rem;
 
 // Border-width
 $border-width__btn: .125em;
