--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -3,101 +3,147 @@
 --------------------------------------------------------------*/
 
 // SoaPatrick Styling
-.soapatrick {
-  font-style: normal;
-  display: inline-block;
+// .soapatrick {
+//   font-style: normal;
+//   display: inline-block;
 
-  &--soa {
-    margin-top: -.2rem;
-  }
+//   &--soa {
+//     margin-top: -.2rem;
+//   }
 
-  &--patrick {
-    margin-top: .13rem;
-  }
-}
+//   &--patrick {
+//     margin-top: .13rem;
+//   }
+// }
 
 .site-navigation {
-  position: fixed;
-  width: $navbar__width;
   top: 0;
-  left: 0;
-  bottom: 0;
-  padding-top: $margin__body;
-  z-index: 1000;
+  bottom: auto;
 
-  &__link {
-    height: $navbar__width;
-    width: $navbar__width;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 
-    span {
-      display: flex;
-      white-space: nowrap;
-      align-items: center;
-      height: auto;
-      position: absolute;
-      z-index: 0;
-      left: calc(1rem + #{$navbar__width});
-      visibility: hidden;
-      background-color: var(--color__text);
-      color: var(--color__body);
-      padding: .5rem 1.25rem;
-      font-weight: 400;
-      border-radius: 2rem;
-    }
+    li {
+      padding: 0;
 
-    &.active,
-    &:hover {
-      background: var(--color__highlight);
-      color: $color__white;
-
-      svg {
-        color: $color__white;
-
-        .primary {
-          fill: var(--color__body);
-        }
+      &:before {
+        content: none;
       }
-
-      &:hover span {
-        visibility: visible;
-      }
-    }
-
-    &:focus {
-      outline: $outline;
-      outline-offset: $outline__width * -1; // make outline inside link
     }
   }
 
-  &__icon {
-    color: var(--color__highlight);
-    font-size: calc(#{$navbar__width} / 3);
-    width: calc(#{$navbar__width} / 3);
+  font-family: $font-family__heading;
+  font-size: $font-size__h4;
+  position: fixed;
+  top: 2rem;
+  left: 2rem;
+  width: calc(#{$navbar--width} - 2rem);
 
-    .secondary {
-      fill: var(--color__text);
+
+  .navbar-brand {
+    border: 0;
+    padding: 0;
+
+    svg {
+      height: 3rem;
+      fill: var(--color__highlight);
+      transition: all .15s ease-in-out;
+    }
+
+    &:hover,
+    &:active {
+      svg {
+        fill: var(--color__text);
+      }
+    }
+  }
+
+  .navbar-nav {
+    &__link {
+      padding: 0;
+      border: 0;
+      left: 0;
+      display: inline-block;
+      position: relative;
+      left: 0;
+      transition: all .25s ease-in-out;
+      cursor: pointer;
+
+      @media (min-width: 912px) {
+
+        &:before {
+          content: "Soap";
+          color: var(--color__highlight);
+          position: absolute;
+          z-index: -1;
+          left: 0rem;
+          opacity: 0;
+          transition: opacity .2s ease-in-out;
+        }
+
+        &:hover {
+          left: -1rem;
+          padding-left: 2.35rem;
+          color: var(--color__text);
+
+          &:before {
+            transition: opacity .25s ease-in-out;
+            opacity: 1;
+          }
+        }
+
+        &--patrick {
+          &:hover {
+            padding-left: 1.75rem;
+          }
+
+          &:before {
+            content: "Soa";
+          }
+        }
+      }
     }
   }
 }
 
-@media #{$breakpoint__767--max} {
+@media #{$breakpoint__991--max} {
   .site-navigation {
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
     top: auto;
     width: 100%;
     display: flex;
     padding: 0;
     box-shadow: $shadow__quarter;
     background: var(--color__body);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-    &__link {
-      flex-grow: 1;
-      height: $navbar__height;
+    ul {
+      display: flex;
       align-items: center;
-      padding-bottom: 1rem;
+      overflow-x: scroll;
+      padding: 10px
+    }
+
+    .navbar-brand {
+      padding: 0 1rem;
+
+
+      svg {
+        height: 1.5rem;
+      }
+    }
+
+    .navbar-nav__link {
+      flex-grow: 1;
+      height: 3rem;
+      align-items: center;
+      padding: 1rem;
 
       span {
         display: none;
@@ -107,7 +153,7 @@
 }
 
 // fix WP Admin Navbar margin
-@media #{$breakpoint__768--min} {
+@media #{$breakpoint__992--min} {
   body.admin-bar {
     .site-navigation {
       padding-top: calc(#{$margin__body} + 32px);
