--- a/assets/scss/components/_highlight.scss
+++ b/assets/scss/components/_highlight.scss
@@ -6,17 +6,29 @@
   color: $color__white;
   background: var(--color__highlight);
 
-  a {
-    background-image: linear-gradient($color__white, $color__white);
-    border-bottom: 1px solid $color__white;
+  a,
+  .post-list .title-list a {
+    color: $color__gray--dark;
 
-    &:hover,
-    &:active {
-      color: $color__gray--darker;
+    &:hover {
+      color: $color__white;
     }
 
     &:focus {
       outline: $outline-highlight;
+    }
+  }
+
+  .post-list .title-list a {
+    &:hover {
+      text-shadow:
+        3px 0 var(--color__highlight),
+        2px 0 var(--color__highlight),
+        2px 0 var(--color__highlight),
+        -2px 0 var(--color__highlight),
+        -2px 0 var(--color__highlight),
+        -3px 0 var(--color__highlight);
+      background-image: linear-gradient(var(--color__text),var(--color__text));
     }
   }
 
@@ -30,16 +42,6 @@
   }
 
   .article__meta .tags a:before {
-    color: $color__gray--darker;
-  }
-
-
-  h1 a,
-  h2 a {
-    margin: 0;
-    padding: 0;
-    background-image: none;
-    background-size: 0 0;
-    bordeR: 0;
+    color: $color__white;
   }
 }
