--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -2,38 +2,9 @@
 #Navigation
 --------------------------------------------------------------*/
 
-// SoaPatrick Styling
-// .soapatrick {
-//   font-style: normal;
-//   display: inline-block;
-
-//   &--soa {
-//     margin-top: -.2rem;
-//   }
-
-//   &--patrick {
-//     margin-top: .13rem;
-//   }
-// }
-
 .site-navigation {
   top: 0;
   bottom: auto;
-
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-
-    li {
-      padding: 0;
-
-      &:before {
-        content: none;
-      }
-    }
-  }
-
   font-family: $font-family__heading;
   font-size: $font-size__h4;
   position: fixed;
@@ -41,38 +12,40 @@
   left: 2rem;
   width: calc(#{$navbar--width} - 2rem);
 
-
-  .navbar-brand {
-    border: 0;
+  &__link {
     padding: 0;
+    border: 0;
+    display: block;
+    color: var(--color__text);
+    margin-bottom: .25em;
 
-    svg {
-      height: 3rem;
-      fill: var(--color__highlight);
-      transition: all .15s ease-in-out;
+    &:hover {
+      text-decoration: none;
+      border: 0;
     }
 
-    &:hover,
-    &:active {
+    &--home {
       svg {
-        fill: var(--color__text);
+        height: 3rem;
+        fill: var(--color__highlight);
+        transition: all .15s ease-in-out;
+      }
+
+      &:hover,
+      &:active {
+        svg {
+          fill: var(--color__text);
+        }
       }
     }
-  }
 
-  .navbar-nav {
-    &__link {
-      padding: 0;
-      border: 0;
-      left: 0;
-      display: inline-block;
+    &--animation {
       position: relative;
       left: 0;
       transition: all .25s ease-in-out;
       cursor: pointer;
 
       @media (min-width: 912px) {
-
         &:before {
           content: "Soap";
           color: var(--color__highlight);
@@ -93,15 +66,17 @@
             opacity: 1;
           }
         }
+      }
+    }
 
-        &--patrick {
-          &:hover {
-            padding-left: 1.75rem;
-          }
+    @media (min-width: 912px) {
+      &--patrick {
+        &:hover {
+          padding-left: 1.75rem;
+        }
 
-          &:before {
-            content: "Soa";
-          }
+        &:before {
+          content: "Soa";
         }
       }
     }
@@ -117,40 +92,21 @@
     width: 100%;
     display: flex;
     padding: 0;
-    padding-bottom: .5rem;
+    padding-bottom: 1rem;
     box-shadow: $shadow__quarter;
     background: var(--color__body);
     display: flex;
     justify-content: space-between;
     align-items: center;
+    overflow-x: scroll;
 
-    ul {
-      display: flex;
-      align-items: center;
-      overflow-x: scroll;
-      padding: 10px
-    }
-
-    .navbar-brand {
-      padding: 0 1rem;
-      justify-content: center;
-      align-items: center;
-      display: flex;
-
-
-      svg {
-        height: 1.5rem;
-      }
-    }
-
-    .navbar-nav__link {
-      flex-grow: 1;
-      height: 3rem;
-      align-items: center;
+    &__link {
       padding: 1rem;
 
-      span {
-        display: none;
+      &--home {
+        svg {
+          height: 1.2rem;
+        }
       }
     }
   }
