--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -5,23 +5,37 @@
 .site-navigation {
   top: 0;
   bottom: auto;
-  font-family: $font-family__heading;
-  font-size: $font-size__h4;
   position: fixed;
   top: 2rem;
   left: 2rem;
   width: calc(#{$navbar--width} - 2rem);
 
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+    li:before {
+      content: none;
+    }
+  }
+
   &__link {
     padding: 0;
     border: 0;
-    display: block;
     color: var(--color__text);
     margin-bottom: .25em;
+    font-family: $font-family__heading;
+    font-size: $font-size__h4;
 
     &:hover {
       text-decoration: none;
       border: 0;
+    }
+
+    &:focus {
+      outline: 3px dotted var(--color__highlight);
+      outline-offset: -3px;
     }
 
     &--home {
@@ -90,15 +104,17 @@
     z-index: 1000;
     top: auto;
     width: 100%;
-    display: flex;
     padding: 0;
     padding-bottom: 1rem;
     box-shadow: $shadow__quarter;
     background: var(--color__body);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     overflow-x: scroll;
+
+    ul {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
     &__link {
       padding: 1rem;
