--- a/assets/scss/base/_grid.scss
+++ b/assets/scss/base/_grid.scss
@@ -24,7 +24,7 @@
 
 @media #{$breakpoint__991--max} {
   .grid {
-    grid-template-columns: minmax($margin__base,1fr) 0 minmax(calc(320px - 2* #{$margin__base}),550px) 0 minmax($margin__base,1fr);
+    grid-template-columns: minmax($margin__base,1fr) 0 minmax(auto,550px) 0 minmax($margin__base,1fr);
 
     > .wp-block-embed-youtube,
     > .wp-block-image,
