SP8-20 [UPDATE] decrease large font size
- remove old fonts
- fix factory list font issue

--- a/assets/scss/components/_article.scss
+++ b/assets/scss/components/_article.scss
@@ -20,6 +20,10 @@
     }
 
     @media #{$breakpoint__991--max} {
+      .posted-on {
+        margin-bottom: .25em;
+      }
+
       .tags {
         margin: 0;
       }
