--- a/assets/scss/components/_tags.scss
+++ b/assets/scss/components/_tags.scss
@@ -7,6 +7,7 @@
   margin-right: .75em;
   margin-bottom: .25em;
   display: inline-block;
+  font-size: $font-size__small;
 
   &:last-child {
     margin-right: 0;
