--- a/assets/scss/page/_factory.scss
+++ b/assets/scss/page/_factory.scss
@@ -4,27 +4,23 @@
 
 .factory-list {
   color: var(--color__text);
-  font-size: $font-size__small;
-
-  @media #{$breakpoint__1199--max} {
-    font-size: calc(10px + 1vw);
-  }
-
-  @media #{$breakpoint__767--max} {
-    font-size: calc(5px + 1.2vw);
-  }
-
   @include bob-animation(article);
 
   &__list {
     margin: $margin__base 0;
     padding-bottom: 2rem;
     display: grid;
+    font-size: $font-size__smaller;
     grid-template-columns: 1fr 1fr 1fr;
     gap: $margin__base;
 
     @media #{$breakpoint__1199--max} {
       grid-template-columns: 1fr 1fr;
+      font-size: calc(10px + 1vw);
+    }
+
+    @media #{$breakpoint__767--max} {
+      font-size: calc(5px + 1.2vw);
     }
   }
 
