--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -29,14 +29,14 @@ $font-family__heading: 'Recoleta', serif;
 $font-family__code: Hack, "Fira Code", Consolas, Menlo, Monaco, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
 
 // Font-Sizes
-$font-size__base: clamp(18px, 1.5vw, 20px);
+$font-size__base: clamp(19px, 1.5vw, 24px);
 $font-size__h1: 2.2rem;
 $font-size__h2: 1.5rem;
 $font-size__h3: 1.2rem;
 $font-size__h4: 1rem;
 $font-size__small: 0.8rem;
 $font-size__smaller: 0.65rem;
-$font-size__large: clamp(2rem, 10vw, 3rem);
+$font-size__large: clamp(2.2rem, 10vw, 3rem);
 
 // Font Line-Height
 $line-height__base: 1.7;
@@ -61,7 +61,7 @@ $outline: $outline__width dotted var(--color__highlight);
 $outline-highlight: $outline__width dotted $color__white;
 
 // Navbar
-$navbar__width: clamp(130px, 12vw, 200px);
+$navbar__width: 8.5rem;
 $navbar__height: 3rem;
 
 // Border-width
