--- a/assets/scss/components/_highlight.scss
+++ b/assets/scss/components/_highlight.scss
@@ -22,13 +22,13 @@
   .post-list .title-list a {
     &:hover {
       text-shadow:
-        3px 0 var(--color__highlight),
-        2px 0 var(--color__highlight),
-        2px 0 var(--color__highlight),
-        -2px 0 var(--color__highlight),
-        -2px 0 var(--color__highlight),
-        -3px 0 var(--color__highlight);
-      background-image: linear-gradient(var(--color__text),var(--color__text));
+        1px 2px var(--color__highlight),
+        2px 2px var(--color__highlight),
+        3px 2px var(--color__highlight),
+        -1px 2px var(--color__highlight),
+        -2px 2px var(--color__highlight),
+        -3px 2px var(--color__highlight);
+      background-image: linear-gradient($color__white,$color__white);
     }
   }
 
