--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -20,6 +20,24 @@
     }
   }
 
+
+  &__icon {
+    display: none;
+
+    &--home {
+      display: block;
+      height: 3rem;
+      fill: var(--color__highlight);
+      transition: all .15s ease-in-out;
+      margin-bottom: .5rem;
+
+      &:hover,
+      &:active {
+        fill: var(--color__text);
+      }
+    }
+  }
+
   &__link {
     padding: 0;
     border: 0;
@@ -38,28 +56,13 @@
       outline-offset: -3px;
     }
 
-    &--home {
-      svg {
-        height: 3rem;
-        fill: var(--color__highlight);
-        transition: all .15s ease-in-out;
-      }
-
-      &:hover,
-      &:active {
-        svg {
-          fill: var(--color__text);
-        }
-      }
-    }
-
     &--animation {
       position: relative;
       left: 0;
       transition: all .25s ease-in-out;
       cursor: pointer;
 
-      @media (min-width: 912px) {
+      @media #{$breakpoint__992--min} {
         &:before {
           content: "Soap";
           color: var(--color__highlight);
@@ -83,7 +86,7 @@
       }
     }
 
-    @media (min-width: 912px) {
+    @media #{$breakpoint__992--min} {
       &--patrick {
         &:hover {
           padding-left: 1.75rem;
@@ -116,13 +119,27 @@
       align-items: center;
     }
 
+    &__icon {
+      display: block;
+      margin: 0;
+      width: 1rem;
+      height: 1rem;
+
+      .primary {
+        fill: var(--color__highlight);
+      }
+
+      .secondary {
+        fill: var(--color__text);
+      }
+    }
+
     &__link {
       padding: 1rem;
+      display: block;
 
-      &--home {
-        svg {
-          height: 1.2rem;
-        }
+      span {
+        display: none;
       }
     }
   }
