--- a/assets/scss/layouts/_settings.scss
+++ b/assets/scss/layouts/_settings.scss
@@ -35,9 +35,10 @@
   &__close {
     position: absolute;
     z-index: 5;
-    right: .75rem;
-    top: .75rem;
+    right: .5rem;
+    top: .5rem;
     cursor: pointer;
+    line-height: 0;
   }
 
   .container {
@@ -48,8 +49,10 @@
     padding: 2rem 1rem;
   }
 
-  .svg-inline--fa {
+  .svg-inline {
     color: var(--color__body);
+    width: 1.5rem;
+    height: 1.5rem;
   }
 
   h2 {
@@ -67,10 +70,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
-  .svg-inline--fa {
-    font-size: 1.3rem;
-  }
 
   .theme-switch {
     display: inline-block;
