--- a/assets/scss/components/_article.scss
+++ b/assets/scss/components/_article.scss
@@ -14,14 +14,14 @@
       margin-right: 1.5rem;
 
       a {
-        margin-bottom: .25em;
+        margin-bottom: .25rem;
         display: inline-block;
       }
     }
 
     @media #{$breakpoint__991--max} {
       .posted-on {
-        margin-bottom: .25em;
+        margin-bottom: .25rem;
       }
 
       .tags {
@@ -31,16 +31,6 @@
       .edit {
         display: none;
       }
-    }
-
-    svg {
-      font-size: inherit;
-      height: 1em;
-      margin-right: .5em;
-      width: 1.25em;
-      vertical-align: -.125em;
-      display: inline-block;
-      overflow: visible;
     }
   }
 
