--- a/assets/scss/post/_list.scss
+++ b/assets/scss/post/_list.scss
@@ -47,11 +47,11 @@
       height: 2em;
     }
 
-    .svg-inline--fa {
-      font-size: 1.5rem;
+    svg {
+      width: 1.5rem;
 
       @media #{$breakpoint__767--max} {
-        font-size: 1rem;
+        width: 1rem;
       }
     }
 
