--- a/assets/scss/page/_changelog.scss
+++ b/assets/scss/page/_changelog.scss
@@ -24,13 +24,12 @@
     }
   }
 
-  span {
-    position: absolute;
-    left: -1.5rem;
-    width: 1.5rem;
-  }
-
   svg {
     color: var(--color__highlight);
+    position: absolute;
+    left: -1.5rem;
+    top: .35rem;
+    width: 1rem;
+    height: 1rem;
   }
 }
