--- a/assets/scss/abstracts/_fonts.scss
+++ b/assets/scss/abstracts/_fonts.scss
@@ -4,12 +4,32 @@
 
 @font-face {
   font-family: 'Recoleta';
-  src: url('../fonts/Recoleta-Bold.ttf')  format('truetype');
+  src: url('/wp-content/themes/soapatrickeight/assets/fonts/Recoleta-Bold.ttf')  format('truetype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
-// Google Font Lato:
-// https://fonts.google.com/specimen/Lato
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@font-face {
+  font-family: 'Lato';
+  src: url('/wp-content/themes/soapatrickeight/assets/fonts/Lato-300.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('/wp-content/themes/soapatrickeight/assets/fonts/Lato-400.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('/wp-content/themes/soapatrickeight/assets/fonts/Lato-700.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
