SP8-31 [UPDATE] fix navbar position if logged in

--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -160,7 +160,7 @@
 @media #{$breakpoint__992--min} {
   body.admin-bar {
     .site-navigation {
-      padding-top: calc(#{$margin__body} + 32px);
+      top: calc(#{$margin__body} + 32px);
     }
   }
 }
