--- a/assets/scss/components/_highlight.scss
+++ b/assets/scss/components/_highlight.scss
@@ -5,13 +5,25 @@
 .highlight {
   color: $color__white;
   background: var(--color__highlight);
+  -webkit-font-smoothing: subpixel-antialiased;
+
+  h1,
+  h2 {
+    -webkit-font-smoothing: antialiased;
+  }
 
   a,
   .post-list .title-list a {
-    color: $color__gray--dark;
+    color: $color__white;
+  }
+
+  a {
+    font-weight: $font-weight__light;
+    padding-bottom: 1px;
+    border-bottom: 1px solid currentColor;
 
     &:hover {
-      color: $color__white;
+      border-bottom: 1px solid transparent;
     }
 
     &:focus {
@@ -42,6 +54,7 @@
   }
 
   .article__meta .tags a:before {
-    color: $color__white;
+    color: $color__gray--darker;
+    font-weight: $font-weight__regular;
   }
 }
