--- a/assets/scss/post/_single.scss
+++ b/assets/scss/post/_single.scss
@@ -24,7 +24,7 @@
     p {
       font-family: $font-family__heading;
       font-size: $font-size__h3;
-      line-height: 1.4;
+      line-height: 1.3;
       margin-top: 0;
     }
 
@@ -32,6 +32,13 @@
     &__status {
       > *:last-child {
         margin-bottom: 0;
+      }
+    }
+
+    &__quote,
+    &__link {
+      p {
+        font-size: clamp($font-size__h3, 2vw, $font-size__h1);
       }
     }
 
